<resources>
    <!-- Título de la actividad -->
    <string name="app_name">Editor de Nota</string>

    <!-- Texto para el campo EditText -->
    <string name="hint_nota">Escribe tu nota aquí</string>

    <!-- Texto para el botón de compartir -->
    <string name="button_compartir">Compartir por correo</string>

    <string name="button_editar">Editar nota</string>

    <!-- Título centrado para la actividad -->
    <string name="titulo_editor">Editor de Nota</string>

    <!-- Mensajes de error -->
    <string name="error_nota_vacia">Por favor, escribe una nota antes de compartir</string>
    <string name="nota_guardada">Nota guardada</string>"

    <!-- Mensajes de confirmación -->
    <string name="nota_recibida">Nota recibida</string>"
    <string name="nota_compartida">Nota compartida</string>"

    <!-- Llave para pasar la nota a la siguiente actividad y el compartido -->
    <string name="key_nota">nota</string>
    <string name="key_compartido">compartido</string>

</resources>